@@ -4,7 +4,7 @@ return array(
     'app_version' => '3.0.3',
     
     // 发布时间
-    'release_time' => '20200809',
+    'release_time' => '20201007',
     
     // 修订版本
     'revise_version' => '0'
