@@ -13,30 +13,23 @@
         	<form class="my-4" onsubmit="return register(this);">
                 <div class="form-group">
                     <label for="username">账　号</label>
-                    <div>
-                        <input type="text" name="username" required id="username" class="form-control" placeholder="请输入登录账号">
-                    </div>
+                    <input type="text" name="username" required id="username" onblur="isRegister()" class="form-control" placeholder="请输入登录账号">
+                    <div id="usernote"></div>
                 </div>
                 
                 <div class="form-group">
                     <label for="nickname">昵　称</label>
-                    <div>
-                        <input type="text" name="nickname" required id="nickname" class="form-control" placeholder="请输入账号昵称">
-                    </div>
+                    <input type="text" name="nickname" required id="nickname" class="form-control" placeholder="请输入账号昵称">
                 </div>
                 
                 <div class="form-group">
                     <label for="password">密　码</label>
-                    <div>
-                        <input type="password" name="password" required id="password" class="form-control" placeholder="请输入登录密码">
-                    </div>
+                    <input type="password" name="password" required id="password" class="form-control" placeholder="请输入登录密码">
                 </div>
                 
                 <div class="form-group">
                     <label for="rpassword">确认密码</label>
-                    <div>
-                        <input type="password" name="rpassword" required id="rpassword" class="form-control" placeholder="请再次输入登录密码">
-                    </div>
+                    <input type="password" name="rpassword" required id="rpassword" class="form-control" placeholder="请再次输入登录密码">
                 </div>
                 
                 {pboot:if({pboot:registercodestatus}==1)}
@@ -122,8 +115,12 @@ function sendEmail(){
   var url='{pboot:sendemail}';
   var username=$("#username").val();
   if(!username){
-	  alert("请先输入需要注册的邮箱账号！");
-	  return false;
+	 $("#username").addClass("is-invalid");
+ 	 $("#usernote").addClass("invalid-feedback");
+ 	 $("#username").removeClass("is-valid");
+ 	 $("#usernote").removeClass("valid-feedback");
+ 	 $("#usernote").text("请输入需要注册的账号！");
+	 return false;
   }
   $.ajax({
     type: 'POST',
@@ -138,6 +135,49 @@ function sendEmail(){
       }else{
     	 alert(response.data);
       }
+    },
+    error:function(xhr,status,error){
+      alert('返回数据异常！');
+    }
+  });
+  return false;
+}
+
+//检查注册账号
+function isRegister(){
+  var url='{pboot:isregister}';
+  var username=$("#username").val();
+  if(!username){
+	 $("#username").addClass("is-invalid");
+ 	 $("#usernote").addClass("invalid-feedback");
+ 	 $("#username").removeClass("is-valid");
+ 	 $("#usernote").removeClass("valid-feedback");
+ 	 $("#usernote").text("请输入需要注册的账号！");
+	 return false;
+  }
+  $.ajax({
+    type: 'POST',
+    url: url,
+    dataType: 'json',
+    data: {
+    	username: username
+    },
+    success: function (response, status) {
+      if(response.code){//已经被注册
+    	 $("#username").addClass("is-invalid");
+    	 $("#usernote").addClass("invalid-feedback");
+    	 
+    	 $("#username").removeClass("is-valid");
+    	 $("#usernote").removeClass("valid-feedback");
+    	
+      }else{//未被注册
+    	 $("#username").addClass("is-valid");
+    	 $("#usernote").addClass("valid-feedback");
+    	 
+    	 $("#username").removeClass("is-invalid");
+    	 $("#usernote").removeClass("invalid-feedback");
+      }
+      $("#usernote").text(response.data);
     },
     error:function(xhr,status,error){
       alert('返回数据异常！');
