@@ -3,6 +3,13 @@
 标签手册：https://www.pbootcms.com/docs.html
 ##########################################
 
+PbootCMS V3.0.3 build 2020-10-07
+1、修复上版本出现的地址后缀不一致问题；
+2、修复搜索功能多语言混乱问题；
+3、新增{pboot:isregister}用于js检查用户名是否已经注册；
+4、修复已经注册的邮箱仍然发送验证码问题；
+5、修复系统存在的安全问题；
+
 PbootCMS V3.0.2 build 2020-08-04
 1、修复会员评论无昵称时不解析标签问题；
 2、修复默认模板留言页面判断错误问题；
